--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ app.version=1.0.0
 # Configuracion de la conexion a MariaDB
 
 spring.datasource.url=jdbc:mariadb://192.168.1.202:3306/DBTmp
+#spring.datasource.url=jdbc:mariadb://localhost:3306/DBTmp
 spring.datasource.username=serverdb
 spring.datasource.password=pass_CPN2025
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
